# satifs

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  counter.pb.cc  counter.pb.h  echo.pb.cc  echo.pb.h  main.cpp  satifs.cbp
server/namenode/: inode.cpp  inode.h
src/client/: client.cpp
src/ha/: raft_service.h
src/proto/: counter.proto  echo.proto
src/server/: base_service.cpp  base_service.h  block_service.cpp  block_service.h  file_service.cpp  file_service.h  main_server.cpp  main_server.h
src/server/block_management/: block_info.cpp  block_info.h  datanode_storage_info.cpp  datanode_storage_info.h
src/server/ha/: raft_service.cpp
src/server/namenode/: inode.h  inode_attributes.cpp  inode_attributes.h  inode_directory.cpp  inode_directory.h  inode_file.cpp  inode_file.h  name_node_service.cpp  name_node_service.h
src/storage/: rocksdb_store.cpp  rocksdb_store.h
src/test/: inode_file_test.cpp
